fb login back to working, but still auto-fb-logout problem; also a small fix that helps user logs out AFTER he's logged out of fb; session, however is still maintained

--- a/app/views/users/_user_bar.html.erb
+++ b/app/views/users/_user_bar.html.erb
@@ -1,15 +1,17 @@
 <div id="userStatus">
 <% if logged_in? -%>
 
-  <% if current_user.facebook_user? %>
+  <% if facebook_session %>
     <!-- FACEBOOK PROFILE PICTURE -->
     <fb:profile-pic uid="<%= current_user.fb_user_id%>" facebook-logo="true" size="thumb" ></fb:profile-pic>
   
     <span id="user-bar-greeting">Hi <%= link_to_current_user :content_method => :name %>!</span>
-    <span id="user-bar-action"><a href="#" onclick='FB.Connect.logoutAndRedirect("/sessions/destroy")'>Log out</a>
-      <!-- OLDER line, can delete -->
-      <!-- (<%= fb_logout_link("Log out", logout_path)%>)</span> -->
-
+    <span id="user-bar-action">(<%= fb_logout_link("Log out", logout_path)%>)</span>
+    
+    <!-- OLDER line, can delete -->
+    <!-- <span id="user-bar-action"><a href="#" onclick='FB.Connect.logoutAndRedirect("/sessions/destroy")'>Log out</a> -->
+    <!-- <span id="user-bar-action">(<%= link_to "Log out", logout_path, { :title => "Log out" } %>)</span> -->
+    
   <% else %>
     <span id="user-bar-greeting">Hi <%= link_to_current_user :content_method => :name %>!</span>
     <span id="user-bar-action">(<%= link_to "Log out", logout_path, { :title => "Log out" } %>)</span>
