--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -49,7 +49,7 @@
 
     <td><%= (task.started_at.nil? or task.is_finished?) ? '&nbsp;' : link_to( image_tag("clock.png", :border=>0, :alt=>'Adjust time', :title=>'Adjust time'), add_time_path(task)) %></td>
 
-    <td><%= (task.started_at.nil? or task.is_finished?) ? '&nbsp;' : link_to( image_tag("sign_deny.png", :border=>0, :alt=>'Adjust time', :title=>'Stop time'), stop_time_path(task)) %></td>
+		<td id="stopTask<%= task.id %>"> <%= link_to_function(image_tag("circle-red-16.png"), "stopTask(#{task.id})", :id => "imgStopTask#{task.id}") %> </td>
 
     <noscript><td><%= link_to 'Edit', edit_task_path(task) %></td></noscript>
 
