--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -48,6 +48,7 @@
     </td>
 
     <td><%= (task.started_at.nil? or task.is_finished?) ? '&nbsp;' : link_to( image_tag("clock.png", :border=>0, :alt=>'Adjust time', :title=>'Adjust time'), add_time_path(task)) %></td>
+    <td style="display:none"><%= link_to 'Add time', add_time_path(task) %></td>
 
 		<td id="stopTask<%= task.id %>"> <%= (task.started_at.nil? or task.is_finished?) ? '&nbsp;' : link_to_function(image_tag("circle-red-16.png"), "stopTask(#{task.id})", :id => "imgStopTask#{task.id}") %> </td>
 
