--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -142,7 +142,7 @@
 <br />
 
 <p>
-<!--<%= link_to 'New task', new_task_path %>-->
+<%= link_to 'New task', new_task_path %>
 </p>
 
 <% @active_task = Task.find(:all, :conditions => {:active_task => true}) %>
