--- a/app/views/user_mailer/signup_notification.html.erb
+++ b/app/views/user_mailer/signup_notification.html.erb
@@ -1,4 +1,4 @@
-Your account has been created.
+Your Constant Win account has been created.
 
   Username: <%=h @user.login %>
   Password: <%=h @user.password %>
