embedded calendar popup, formatting and adding functionality

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -6,11 +6,13 @@
   <title>ConstantWin / <%= yield(:title) %></title>
   <!-- TODO: Add default JavaScript and CSS tags -->
   <%= stylesheet_link_tag 'base' %>
+  <%= stylesheet_link_tag 'calendarview' %>
   <%= javascript_include_tag 'jquery-1.4.3.min' %>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js"></script>
   <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'base' %>
+  <%= javascript_include_tag 'calendarview' %>
 </head><body>
 
 <%= fb_connect_javascript_tag %>
