--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -140,10 +140,12 @@
 </h1>
 
 
+<div id="addTaskDiv">
 <% form_tag(:controller => "tasks", :action => "create") do %>
   <%= text_field_tag(:task_description, nil, :size => "30", :name => "task[description]") %>
   <%= submit_tag("Add task") %>
 <% end %>
+</div>
 
 <div id="popupDateField" class="dateField">Select Date</div>
 
