--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -16,3 +16,8 @@ h1, h2, h3 { font-family: georgia, times; }
 a { color: green; }
 #progressbar { height:50px; }
 .task_description { padding-right: 50px; }
+/* calendarview */
+#addTaskDiv { display: inline-block; }
+#popupDateField { display: inline; background-color: #cde; cursor: pointer; }
+div.dateField { width: 140px; padding: 4px 6px; -webkit-border-radius: 6px; -moz-border-radius: 6px; color: #555; text-align: center; }
+
