--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -19,5 +19,5 @@ a { color: green; }
 .task_description { padding-right: 50px; }
 /* calendarview */
 #addTaskDiv {display: inline-block; }
-div.dateField, #addTaskButton { display: inline-block; padding: 3px 5px; border: 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; color: #555; background-color: #cde; text-align: center; }
+div.dateField, #addTaskButton { display: inline-block; padding: 3px 5px; border: 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; color: #555; background-color: #cde; text-align: center; cursor: pointer}
 
