--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -135,11 +135,11 @@
   
 
 function datePickSelect() {
-  y = this.date.getFullYear()
-  m = this.date.getMonth()
-  d = this.date.getDay()
-  dateParam = y*10000+m*100+d
-  jQuery("#table_container").load('/tasks/ondate/',  {'date': dateParam})
+  y = this.date.getUTCFullYear();
+  m = this.date.getUTCMonth() + 1;
+  d = this.date.getUTCDate();
+  dateParam = y*10000+m*100+d;
+  jQuery("#table_container").load('/tasks/ondate/',  {'date': dateParam});
   Calendar.defaultSelectHandler(this);
 }
 
