--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -24,4 +24,4 @@ input[type="submit"][value="+"] { font-size:20px; -webkit-border-radius:6px; -mo
 .taskEntry { font-family:verdana; font-size:12px; }
 #addTaskDiv {display: inline-block; }
 div.dateField, #addTaskButton { display: inline-block; padding: 3px 5px; border: 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; color: #555; background-color: #cde; text-align: center; cursor: pointer}
-
+#other_tasks { text-align:center; -moz-border-radius:6px; -webkit-border-radius:6px; background:#ccddee; color:#555555; width:120px;padding:4px; }
