--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -6,6 +6,7 @@
   <p>
     <%= f.label :description %><br />
     <%= f.text_field :description %>
+    <%= f.hidden_field :associated_date %>
   </p>
   
   <p>
