--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -28,3 +28,4 @@ input[type="submit"][value="+"]:hover ,input[type="submit"][value="Add time"]:ho
 #addTaskDiv {display: inline-block; }
 div.dateField, #addTaskButton { display: inline-block; padding: 3px 5px; border: 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; color: #555; background-color: #cde; text-align: center; cursor: pointer}
 #other_tasks { text-align:center; -moz-border-radius:6px; -webkit-border-radius:6px; background:#ccddee; color:#555555; width:120px;padding:4px; }
+#dateNav a { text-decoration: none; color: #000; font: bold 25pt verdana; }
